# wagtail-algolia-search

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  setup.cfg
tests/: db.sqlite3  factories.py  models.py  settings.py  test_backend.py
tests/migrations/: 0001_initial.py  0002_blogpage_is_featured.py
wagtail_algolia_search/: backend.py
