[tool.poetry]
name = "wagtail-algolia-search"
version = "0.1.0"
description = "Algolia Search backend for Wagtail"
authors = ["Mitchel Cabuloy <mitchel.cabuloy@torchbox.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.6.2"
Django = ">=2.2,<4.0"
wagtail = ">=2.11,<3"
algoliasearch = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
ipdb = "^0.13.9"
wagtail-factories = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
